# converge

./: .dockerignore  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  otel-collector-config.yaml  policy.default.json  pyproject.toml  ruff.toml
.github/workflows/: cd.yml  ci.yml
docs/: CIERRE_CIRCULO_GOBERNANZA.md  ENTERPRISE_STAGE_PLAN_8W.md  GOVERNANCE_CYCLE_CLOSURE.md  IMPLEMENTATION_BACKLOG_AGENTIC_READINESS.md  IMPLEMENTATION_PLAN_AGENTIC_READINESS.md  MANIFESTO_SCALING_1000_PRS_WITH_INTENT.md  MANIFESTO_SOFTWARE_AS_DECISION_SYSTEM.md  MANIFIESTO_INGENIERIA_SISTEMA_DE_DECISIONES.md  MANIFIESTO_SISTEMA_1000_PR_CON_INTENCION.md  QUICKSTART.md  READINESS_AGENTIC_REVIEW_MATRIX.md  READINESS_REPORT.md  RUNBOOK.md  SIMPLIFICATION_REVIEW_RESPONSE.md  bombs-in-converge.md  calibration-in-converge.md  coherence-in-converge.md  containment-in-converge.md  converge-overview.md  dependency-graph-in-converge.md  entropy-in-converge.md  intents-in-converge.md  risk-scoring-in-converge.md  security-in-converge.md  verification-in-converge.md
docs/archive/: READINESS_REVIEW_POST_IMPLEMENTATION.md
k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  secret.yaml  service.yaml
migrations/: 001_initial_down.sql  001_initial_up.sql
scripts/: backfill_commit_links.py  backfill_sqlite_to_pg.py  check_module_limits.py  seed_demo_data.py
src/converge/: __init__.py  __main__.py  agents.py  analytics.py  audit_chain.py  cli.py  coherence.py  coherence_feedback.py  defaults.py  engine.py  event_log.py  event_payloads.py  event_types.py  exports.py  feature_flags.py  harness.py  intake.py  models.py  observability.py  ownership.py  policy.py  ports.py  projections_models.py  resilience.py  reviews.py  risk.py  scm.py  security.py  security_models.py  server.py  worker.py  (+1 more)
tests/: conftest.py  test_advisory_locks.py  test_agents.py  test_analytics.py  test_api_factory.py  test_archaeology_enhanced.py  test_audit_chain.py  test_availability.py  test_cli.py  test_coherence.py  test_coherence_feedback.py  test_commit_links.py  test_dashboard.py  test_doctor.py  test_e2e.py  test_e2e_lifecycle.py  test_engine.py  test_event_log.py  test_exports.py  test_feature_flags.py  test_github_app.py  test_github_fixes.py  test_harness.py  test_health.py  test_intake.py  test_invariants.py  test_lifecycle_full.py  test_llm_advisor.py  test_load.py  test_matrix_gaps.py  test_merge_group.py  test_modular.py  test_notifications.py  test_observability.py  test_origin_type.py  test_ownership.py  test_phase9_hardening.py  test_plan_coordination.py  test_policy.py  test_postgres.py  (+20 more)
(+80 files in other folders)
