[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "converge"
version = "0.1.0"
description = "Code entropy control through semantic merge coordination"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0,<4",
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.30.0,<1",
    "httpx>=0.25.0,<1",
    "PyJWT[crypto]>=2.8.0,<3",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1.0,<4",
    "psycopg_pool>=3.2.0,<4",
]
semantic = ["sentence-transformers>=2.2.0,<4"]
llm = ["anthropic>=0.20.0,<1", "openai>=1.10.0,<2"]

[project.scripts]
converge = "converge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: tests that require real network sockets (HTTP server)",
]
filterwarnings = [
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]
